[metadata]
name = cocotbext-vidio
version = 0.0.2
author = Nitheesh Manjunath
author_email = nitheesh2013@gmail.com
description = AXIS video subsystem for cocotb
keywords = axi, cocotb
license = MIT
url = https://github.com/nitheeshkm/cocotbext-vidio
project_urls =
    Bug Tracker = https://github.com/nitheeshkm/cocotbext-vidio/issues
    Source Code = https://github.com/nitheeshkm/cocotbext-vidio
download_url = https://github.com/nitheeshkm/cocotbext-vidio/tarball/main
long_description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    cocotb >= 1.6.0
    cocotb-bus
    cocotbext-axi
    numpy

[options.extras_require]
test =
    pytest
    cocotb-test

[options.packages.find]
include = cocotbext.*